[BACK] yandex gpt comment
